# player-lyrics

./: Cargo.toml
src/: geniusgetter.rs  gtk_main.rs  main.rs  musicfinder.rs  text_main.rs  utils.rs
src/user_interface/: gtk_interface.rs  mod.rs  text_interface.rs  user_interface.rs
