[package]
name = "player-lyrics"
version = "0.1.0"
edition = "2024"
authors = ["Laurent Brock <laurentbrock@live.com.au>"]
[[bin]]
name = "text-ui"
path = "src/text_main.rs"

[dependencies]
deunicode = "1.6.2"
mpris = "2.0.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
