[package]
name = "player-lyrics"
version = "0.1.0"
edition = "2024"
authors = ["Laurent Brock <laurentbrock@live.com.au>"]
[[bin]]
name = "player-lyrics"
path = "src/text_main.rs"
[[bin]]
name = "player-lyrics-gtk"
path = "src/gtk_main.rs"

[dependencies]
bytes = "1.10.1"
deunicode = "1.6.2"
gtk4 = { version = "0.10.0", features = ["v4_8"] }
mpris = "2.0.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
